Version 10 Properly format with Tabs Add Mod Pack abilities Add Log search